# snippets

./: README.md
GL/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
GL/src/0-imgui-test/: main.cpp
GL/src/1-hello/: main.cpp
GL/src/2-xyz/: global.hpp  main.cpp
GL/src/2-xyz/shader/: frag.glsl  vertex.glsl
GL/src/3-light1/: date.in.cpp  main.cpp
GL/src/3-light1/shader/: frag.glsl
GL/src/3-light2/: data.in.cpp  main.cpp
GL/src/3-light2/shader/: frag.glsl  light_fragcolor.glsl  light_vertex.glsl  vertex.glsl
GL/src/4-model/: main.cpp  vertices.hpp.in
GL/src/4-model/shader/: frag.glsl  light_fragcolor.glsl  light_vertex.glsl  nanosuitfrag.glsl  nanosuitvertex.glsl  rock_frag.glsl  rock_vertex.glsl  vertex.glsl
GL/src/5.1/: data.in.cpp  main.cpp
GL/src/5.1/shader/: vertex.glsl
GL/src/5.10/: main.cpp
GL/src/5.10/shader/: frag.glsl  vertex.glsl
GL/src/5.2/: data.in.cpp  main.cpp
GL/src/5.2/shader/: frag.glsl  singlecolorfrag.glsl
GL/src/5.3/: main.cpp  vertices.in.cpp
GL/src/5.3/shader/: frag.glsl  vertex.glsl
GL/src/5.5/: main.cpp  vertices.in.cpp
GL/src/5.9/: main.cpp
GL/src/5.9/shader/: frag.glsl  geometry.glsl  vertex.glsl
GL/src/_lake/: main.cpp
GL/src/_lake/shader/: frag.glsl  src.glsl  vertex.glsl
GL/src/tool/: camera.hpp  global.hpp  gui.hpp  mesh.hpp  model.hpp  shader.hpp  util.hpp  vertex.hpp  window.hpp
cpp/: big_umap.cpp  brainfuck.cpp  cf.cpp  gmp.c
hh/: CMakeLists.txt  color.hpp  filter.hpp  main.cpp
json/: CMakeLists.txt  README.md
json/code/: main.cpp
json/code/include/: json.hpp  parse.hpp
json/code/include/base/: io.hpp  token.hpp  util.hpp
json/code/json/: json.cpp  parse.cpp
json/code/json/base/: io.cpp  token.cpp
json/testcase/: CMakeLists.txt
json/testcase/file/: basic1.json
network/: .gitignore  README.md
network/1/: Makefile  client.c  serve.c
network/2/: Makefile  client.c  serve.c  test.cpp
network/3/: Makefile  client.cpp  serve.cpp  test.c  test2.cpp
network/4/: Makefile  client.cpp
network/5/: Makefile  serve.cpp
network/asio/: Makefile  echo.cpp  echoc.cpp  threadpool.cpp
network/include/: Taskpool.hpp  chatbox.hpp  client.hpp  loger.hpp  tools.h
network/util/: ip.c
rpc/: .gitignore  CMakeLists.txt  README.md
rpc/code/: main.cpp
rpc/code/include/: bind.hpp  rpc.hpp  serialize.hpp
rpc/code/rpc/: rpc.cpp  serialize.cpp
rpc/testcase/: CMakeLists.txt
rpc/testcase/basic/: client.cpp  public.hpp  server.cpp
rpc/testcase/include/: tools.hpp
